# eskimo

./: .gitignore  CMakeLists.txt
assets/levels/: test.json
headers/: collision_direction.hpp  config.hpp  game.hpp  hitbox.hpp  level.hpp  obstacle.hpp  player.hpp  tileset.hpp
source/: game.cpp  hitbox.cpp  level.cpp  main.cpp  obstacle.cpp  player.cpp  tileset.cpp
